new Updated Files

--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -1132,8 +1132,8 @@ body .product-listing-inner-content .score-section .score-detail h6 {
     text-overflow: ellipsis;
     display: block;
 } */
-.pros-corns-section.corns ul li::before{
-  content: url(/images/close.svg)!important;
+.pros-corns-section.corns ul li::before {
+  content: url(/images/close.svg) !important;
   position: absolute;
   right: 100%;
   top: 8px !important;
@@ -1396,14 +1396,15 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   z-index: 100;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 14px !important;
   padding: 10px 18px;
   text-align: left;
   bottom: 100%;
   left: 5px;
   color: rgb(39 48 78 / 70%);
-  line-height: 20px;
+  line-height: 20px !important;
   z-index: 10000;
+  text-transform: capitalize !important;
 }
 
 .question_hover_container:hover .display-content {
@@ -1439,7 +1440,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   z-index: 10000;
 }
 
-.tooltip-display-content p {
+.tooltip-display-content p, .question_hover_container .display-content p {
   font-size: 14px !important;
   line-height: 20px !important;
   display: block !important;
