--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -153,6 +153,7 @@
 
 .compare-container tbody .tr-bg-color th {
   padding-left: 10px !important;
+  vertical-align: middle;
 }
 
 .compare-container tbody .show_more {
@@ -1181,7 +1182,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 .score-section .score-detail p {
   font-weight: 400 !important;
   font-size: 20px;
-  line-height: 34px;
+  line-height: 24px;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -1385,16 +1386,15 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 
 .question_hover_container {
   position: relative;
-  z-index: 10000;
 }
 
 .question_hover_container .display-content {
   display: none;
   position: absolute;
   width: 260px;
-  background: #f5f5f5;
+  background: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  z-index: 100;
+  z-index: 10000;
   font-weight: 400;
   font-size: 14px !important;
   padding: 10px 18px;
@@ -1404,7 +1404,8 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   color: rgb(39 48 78 / 70%);
   line-height: 20px !important;
   z-index: 10000;
-  text-transform: capitalize !important;
+  text-transform: none !important;
+  border: 1px solid #d4d6dc;
 }
 
 .question_hover_container:hover .display-content {
@@ -1415,7 +1416,10 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   position: relative;
   width: fit-content !important;
   cursor: help;
-  border-bottom: 2px dotted;
+  text-decoration: underline;
+  text-decoration-style: dashed;
+  text-decoration-thickness: 1.4px;
+  text-underline-offset: 5px;
 }
 
 .tooltip-title:hover .tooltip-display-content {
@@ -1426,7 +1430,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   display: none;
   position: absolute;
   width: 250px;
-  background: #f5f5f5;
+  background: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   z-index: 100;
   font-weight: 400;
@@ -1438,12 +1442,17 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   color: rgb(39 48 78 / 70%);
   line-height: 20px;
   z-index: 10000;
+  border: 1px solid #d4d6dc;
 }
 
 .tooltip-display-content p, .question_hover_container .display-content p {
   font-size: 14px !important;
   line-height: 20px !important;
   display: block !important;
+}
+
+.compare-container tbody tr th .tooltip-display-content p{
+  font-weight: 400 !important;
 }
 
 .scroe_section {
