--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -1422,6 +1422,19 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   text-underline-offset: 5px;
 }
 
+.ranking-tooltip-title {
+  position: relative;
+  width: fit-content !important;
+  cursor: help;
+  /* text-decoration: underline;
+  text-decoration-style: dashed;
+  text-decoration-thickness: 1.4px;
+  text-underline-offset: 5px; */
+} 
+.ranking-tooltip-title:hover .tooltip-display-content {
+  display: block;
+}
+
 .tooltip-title:hover .tooltip-display-content {
   display: block;
 }
@@ -1445,13 +1458,14 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   border: 1px solid #d4d6dc;
 }
 
-.tooltip-display-content p, .question_hover_container .display-content p {
+.tooltip-display-content p,
+.question_hover_container .display-content p {
   font-size: 14px !important;
   line-height: 20px !important;
   display: block !important;
 }
 
-.compare-container tbody tr th .tooltip-display-content p{
+.compare-container tbody tr th .tooltip-display-content p {
   font-weight: 400 !important;
 }
 
