--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -1430,7 +1430,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   text-decoration-style: dashed;
   text-decoration-thickness: 1.4px;
   text-underline-offset: 5px; */
-} 
+}
 .ranking-tooltip-title:hover .tooltip-display-content {
   display: block;
 }
@@ -1489,4 +1489,9 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   background: rgb(9, 54, 115);
   color: #fff;
   border-radius: 5px;
+}
+
+.prosconsColor > span {
+  color: #437ece !important;
+  font-weight: bold;
 }
