--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -3,8 +3,7 @@
   background: var(--white-color);
   backdrop-filter: none !important;
   text-align: center;
-  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1))
-    drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1)) drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.1));
 }
 
 .best-page-card .hero-card-content .count {
@@ -68,11 +67,13 @@
   font-weight: 400;
 }
 
-.compare-container tr:nth-child(odd) th, .compare-container tr:nth-child(odd) td{
-  background: #fcfdfe !important ;
+.compare-container tr:nth-child(odd) th,
+.compare-container tr:nth-child(odd) td {
+  background: #fcfdfe !important;
 }
 
-.compare-container tr.show_more_row:nth-child(odd) td, .compare-container tr.show_more_row:nth-child(odd) th{
+.compare-container tr.show_more_row:nth-child(odd) td,
+.compare-container tr.show_more_row:nth-child(odd) th {
   background: transparent !important;
 }
 
@@ -166,7 +167,7 @@
   /* padding-left: 10px !important; */
   vertical-align: middle;
   text-align: center !important;
-  padding: 10px; 
+  padding: 10px;
 }
 
 .compare-container tbody .show_more {
@@ -191,9 +192,11 @@
 .compare-container thead {
   position: static;
 }
+
 .compare-container thead.nonSticky {
   position: static !important;
 }
+
 .compare-container thead tr th .device-name .compare_image {
   width: 50px;
   height: 50px;
@@ -231,6 +234,7 @@
 .compare-container thead.isSticky tr th .best-tag-product {
   position: static !important;
 }
+
 .compare-container thead tr th:not(:first-child),
 .compare-container tbody tr td {
   max-width: 189px;
@@ -373,13 +377,16 @@
 .filter-container::-webkit-scrollbar {
   width: 8px;
 }
+
 .filter-container::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
+
 .filter-container::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 50px;
 }
+
 .filter-section {
   margin: 0 0 20px;
 }
@@ -419,9 +426,7 @@
   margin: 0 8px;
 }
 
-.product-listing-inner-content-table-accordion
-  .inline-ranking-section
-  .ranking-heading {
+.product-listing-inner-content-table-accordion .inline-ranking-section .ranking-heading {
   text-transform: uppercase !important;
   font-weight: 400 !important;
   font-size: 16px;
@@ -438,11 +443,10 @@
   color: #000;
 }
 
-.product-listing-inner-content-table-accordion
-  .product-listing-inner-content-table-accordion-btn
-  .accordion-button {
+.product-listing-inner-content-table-accordion .product-listing-inner-content-table-accordion-btn .accordion-button {
   justify-content: center !important;
 }
+
 .filter-section .tech-features {
   background: #f4f7fb;
   padding: 4px 10px;
@@ -468,6 +472,7 @@
 .filter-accordion .accordion-header .custom-switch {
   display: none;
 }
+
 .filter-accordion .accordion-header:hover i,
 .filter-accordion .accordion-header:hover .custom-switch {
   display: inline;
@@ -559,6 +564,7 @@
   flex-wrap: wrap;
   gap: 10px;
 }
+
 .filtered-data span:hover {
   color: var(--secondary-color);
   cursor: pointer;
@@ -700,19 +706,13 @@
   margin: 8px 0;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .product-score-container
-  .score-section {
+.best-product-listing .product-listing-inner-content .product-score-container .score-section {
   gap: 5px !important;
   justify-content: flex-start !important;
   width: auto !important;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .product-score-container
-  .score-section:before {
+.best-product-listing .product-listing-inner-content .product-score-container .score-section:before {
   content: "";
   position: absolute;
   right: 0px;
@@ -725,22 +725,12 @@
   bottom: -7px;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .product-score-container
-  .score-section
-  .score-detail
-  .query {
+.best-product-listing .product-listing-inner-content .product-score-container .score-section .score-detail .query {
   font-size: 15px !important;
   font-weight: 400 !important;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .product-score-container
-  .score-section
-  .score-detail
-  i {
+.best-product-listing .product-listing-inner-content .product-score-container .score-section .score-detail i {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -753,21 +743,12 @@
   cursor: pointer;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .product-score-container
-  .score-section
-  .score-detail
-  i:hover {
+.best-product-listing .product-listing-inner-content .product-score-container .score-section .score-detail i:hover {
   color: var(--secondary-color);
   border-bottom: 1px dashed var(--secondary-color);
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .product-score-container
-  .score-section
-  .score-detail {
+.best-product-listing .product-listing-inner-content .product-score-container .score-section .score-detail {
   min-width: auto !important;
 }
 
@@ -777,33 +758,18 @@
   min-height: auto !important;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .best-price-section
-  .best-list-item
-  li
-  span {
+.best-product-listing .product-listing-inner-content .best-price-section .best-list-item li span {
   min-width: 80px !important;
   font-size: 15px !important;
   line-height: 30px !important;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .best-price-section
-  .best-list-item
-  li:nth-child(odd) {
+.best-product-listing .product-listing-inner-content .best-price-section .best-list-item li:nth-child(odd) {
   background: none !important;
 }
 
-.best-product-listing
-  .product-listing-inner-content
-  .pros-corns-section.pros
-  ul,
-.best-product-listing
-  .product-listing-inner-content
-  .pros-corns-section.corns
-  ul {
+.best-product-listing .product-listing-inner-content .pros-corns-section.pros ul,
+.best-product-listing .product-listing-inner-content .pros-corns-section.corns ul {
   padding: 0 0px 0 27px !important;
 }
 
@@ -866,11 +832,7 @@
   border-bottom: none !important;
 }
 
-.best-product-listing
-  .table-accordion
-  .inner-accordion
-  > h2
-  > .accordion-button {
+.best-product-listing .table-accordion .inner-accordion>h2>.accordion-button {
   justify-content: center !important;
 }
 
@@ -1096,6 +1058,7 @@
 body .product-listing-inner-content .score-section .score-detail h6 {
   font-size: 15px !important;
 }
+
 .score-section {
   height: 40px;
 }
@@ -1126,12 +1089,15 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   line-height: 34px;
   font-family: "Lato", sans-serif !important;
 }
+
 .compare-container tbody tr th p {
   font-weight: 600;
 }
+
 .ri-close-line {
   font-size: 22px;
 }
+
 .alternatives {
   margin-bottom: 10px;
 }
@@ -1143,6 +1109,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 .pros-corns-section.corns .buy-avoid {
   text-align: center;
 }
+
 /* .best-product-listing .product-listing-inner-content .pros-corns-section ul li span{
   overflow: hidden;
     white-space: nowrap;
@@ -1157,43 +1124,47 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   bottom: 0;
   padding-right: 8px;
 }
+
 .sidebar-width {
   max-width: 240px !important;
   padding-right: 0px !important;
 }
+
 .filter-accordion .accordion-item .accordion-body {
   padding: 0 16px 4px;
 }
+
 .product-listing-inner-content .best-list-item {
   /* padding-top: 10px !important; */
   padding: 5px 0px !important;
 }
+
 .filter-accordion .accordion-item .form-check input[type="checkbox"] {
   width: 18px;
   height: 18px;
 }
+
 .filter-accordion .accordion-item .form-check label {
   padding-left: 3px;
   width: 100%;
 }
-.filter-accordion .accordion-item .form-check label > span {
+
+.filter-accordion .accordion-item .form-check label>span {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
 }
+
 .color-change .score-detail span {
   color: var(--secondary-color) !important;
 }
-.best-product-listing
-  .product-listing-inner-content
-  .product-score-container
-  .score-section
-  .score-detail
-  span {
+
+.best-product-listing .product-listing-inner-content .product-score-container .score-section .score-detail span {
   font-size: 15px !important;
   font-weight: 400 !important;
 }
+
 .score-section .score-detail span,
 .score-section .score-detail p {
   font-weight: 400 !important;
@@ -1206,12 +1177,15 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   font-family: "Lato", sans-serif !important;
   opacity: 80%;
 }
+
 .product-listing-inner-content .score-section .score-detail span {
   font-size: 15px !important;
 }
+
 .best-product-listing .table-accordion .accordion-button .query {
   font-size: 15px !important;
 }
+
 .table-accordion .accordion-button div {
   text-transform: uppercase !important;
   font-weight: 400 !important;
@@ -1220,6 +1194,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   color: var(--heading-color);
   font-family: "Lato", sans-serif !important;
 }
+
 .table-accordion .accordion-button div .show-btn,
 .table-accordion .accordion-button div .hide-btn {
   text-transform: capitalize;
@@ -1237,6 +1212,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 .best-product-listing .inner-accordion .table-accordion .accordion-body {
   border-top: 1px solid rgba(39, 48, 78, 0.2);
 }
+
 .table-accordion .spec-section .query {
   font-weight: 400;
   font-size: 16px;
@@ -1246,6 +1222,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   gap: 5px;
   color: var(--heading-color);
 }
+
 .table-accordion .spec-section .query span {
   width: 16px;
   height: 16px;
@@ -1257,29 +1234,26 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   box-shadow: 0px 0px 3px #888;
   margin: 0 5px;
 }
+
 .table-accordion .spec-section .query span svg {
   width: 12px;
   height: 12px;
   fill: var(--heading-color);
 }
+
 .alternatives .version-availabel {
   font-size: 16px;
 }
-.best-product-listing
-  .product-listing-inner-content
-  .pros-corns-section.pros
-  ul
-  li:before {
+
+.best-product-listing .product-listing-inner-content .pros-corns-section.pros ul li:before {
   top: 6px !important;
 }
+
 @media screen and (max-width: 767px) {
-  .best-product-listing
-    .product-listing-inner-content
-    .pros-corns-section.pros
-    ul
-    li:before {
+  .best-product-listing .product-listing-inner-content .pros-corns-section.pros ul li:before {
     top: 8px !important;
   }
+
   .pros-corns-section.corns ul li::before {
     top: 8px !important;
   }
@@ -1328,9 +1302,11 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   line-height: 24px;
   display: inline-block;
 }
+
 .counter-one {
   background: var(--heading-color);
 }
+
 .counter-two {
   background: var(--secondary-color);
 }
@@ -1345,6 +1321,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   color: #ff8f0b;
   transform: translate(-5px, -50%);
 }
+
 .new-acc_style.accordion button.accordion-button {
   justify-content: center !important;
   background: transparent !important;
@@ -1364,22 +1341,28 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 .new-acc_style.accordion .product_listing_table table tr:nth-child(odd) th {
   background: #f4f7fb !important;
 }
+
 .product_listing_table table tr:last-child td,
 .product_listing_table table tr:last-child th {
   background: transparent !important;
 }
+
 .new-acc_style.accordion .product_listing_table table tr th {
   border-left: 0px !important;
 }
+
 .new-acc_style.accordion .product_listing_table table tr td:last-child {
   border-right: 0px !important;
 }
+
 .new-acc_style.accordion .product_listing_table table tr:last-child th {
   border-bottom: 0px !important;
 }
+
 .new-acc_style.accordion .product_listing_table table tr:last-child td {
   border-bottom: 0px !important;
 }
+
 .new-acc_style.accordion .accordion-body {
   padding-left: 0px !important;
   padding-right: 0px !important;
@@ -1388,6 +1371,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 .product_listing_table table tr th {
   text-align: left !important;
 }
+
 .custom-tool-tip {
   white-space: nowrap;
   overflow: hidden;
@@ -1447,6 +1431,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   text-decoration-thickness: 1.4px;
   text-underline-offset: 5px; */
 }
+
 .ranking-tooltip-title:hover .tooltip-display-content {
   display: block;
 }
@@ -1491,7 +1476,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   margin: 5px 0;
 }
 
-.scroe_section > p {
+.scroe_section>p {
   min-width: 40px;
 }
 
@@ -1506,15 +1491,18 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   border-radius: 5px;
   margin: 0 5px;
 }
-.prosconsColor{
+
+.prosconsColor {
   font-size: 14px !important;
 }
-.prosconsColor > span {
+
+.prosconsColor>span {
   color: #437ece !important;
   font-weight: bold !important;
   font-size: 14px !important;
   line-height: 20px !important;
 }
+
 .prosconsColor span.wrose {
   color: #ce434b !important;
   font-weight: bold !important;
@@ -1685,9 +1673,11 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 .compare-container-2 thead {
   position: static;
 }
+
 .compare-container-2 thead.nonSticky {
   position: static !important;
 }
+
 .compare-container-2 thead tr th .device-name .compare_image {
   width: 50px;
   height: 50px;
@@ -1725,11 +1715,13 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 .compare-container-2 thead.isSticky tr th .best-tag-product {
   position: static !important;
 }
+
 .compare-container-2 thead tr th:not(:first-child),
 .compare-container-2 tbody tr td {
   max-width: 189px;
   width: 189px;
 }
+
 .compare-container-2.table .best-tag-product {
   width: 95%;
   padding: 0px 5px;
@@ -1739,21 +1731,13 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   position: absolute;
   bottom: 100%;
 }
+
 .compare-container-2 tbody tr th p {
   font-weight: 600;
 }
+
 .compare-container-2 tbody tr th .tooltip-display-content p {
   font-weight: 400 !important;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------ */
-
-
-
-
-
-
-
-
-
-
