--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -403,6 +403,7 @@ footer .search-icon{
     border-radius: 10px;
     padding: 2px;
     position: relative;
+    cursor: pointer;
 }
 
 .category-section:hover{
