--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -35,7 +35,7 @@
   max-width: 180px;
   width: 150px;
   border: 1px solid #ddd;
-  padding: 10px;
+  padding: 7px;
   font-weight: 600 !important;
   font-size: 15px;
   line-height: 25px;
@@ -1428,6 +1428,15 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   width: fit-content !important;
   cursor: help;
   text-decoration: underline;
+  text-decoration-style: dashed;
+  text-decoration-thickness: 1.4px;
+  /* text-underline-offset: 5px; */
+}
+.tooltip-title-2 {
+  position: relative;
+  width: fit-content !important;
+  cursor: help;
+  /* text-decoration: underline; */
   text-decoration-style: dashed;
   text-decoration-thickness: 1.4px;
   /* text-underline-offset: 5px; */
