--- a/src/app/styles/blog.css
+++ b/src/app/styles/blog.css
@@ -206,8 +206,13 @@ button.view-blog i{
     font-size: 14px;
     font-style: italic;
 }
+.postCount-2{
+    color: rgba(39, 48, 78, 0.8);
+    font-size: 17px;
+    font-style: italic;
+}
 .cardsGrid .blog-card .card-img {
-    height: 225px;
+    /* height: 225px; */
 }
 .cardsGrid .blog-card .dates{
     background-color: #fff;
